--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -128,7 +128,7 @@
     <!-- header end -->
 
     <!-- introduce start -->
-    <section id="" class="pt-32 pb-32 bg-gradient-to-r from-slate-100 to-white">
+    <section id="" class="pt-32 pb-8 bg-gradient-to-r from-slate-100 to-white">
         <div class="container w-full lg:w-1/2">
             <div class="flex flex-wrap justify-center">
                 <div class="space-y-8 px-4">
@@ -165,14 +165,8 @@
     </section>
     <!-- introduce end -->
 
-    <!-- BG fixed start -->
-    <div class="h-screen bg-auto lg:bg-cover bg-fixed w-full" 
-    style="background-image: url(dist/img/porfolio-revamp-trans-detail/2.png)">
-    </div>
-    <!-- BG fixed end -->
-
     <!-- overview start -->
-    <div class="pt-32 pb-32 space-y-8 bg-gradient-to-r from-slate-100 to-white">
+    <div class=" pb-32 space-y-8 bg-gradient-to-r from-slate-100 to-white">
 
         <!-- problem start -->
         <section id="" class="bg-gradient-to-r from-slate-100 to-white">
@@ -399,7 +393,7 @@
                         <h3 class="font-semibold text-xl text-dark">User Flow</h3>
                         <div class="items-center space-y-2">
     
-                            <p class="font-normal text-base text-slate-500">In PaDi UMKM Seller, there is 2 type of userflow depends on the payment method that is pembayaran langsung and tempo.</p>
+                            <p class="font-normal text-base text-slate-500">In PaDi UMKM Seller, there is 2 type of userflow depends on the payment method that is "pembayaran langsung" and "pembayaran tempo".</p>
                             
                             <div class="space-y-2">
                                 <img class="w-full object-cover rounded-md shadow-sm" src="dist/img/porfolio-revamp-trans-detail/11.png" alt="Landing Page" width="w-full">
