--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out"></span>
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
                     </button>
-                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg  rounded-lg max-w-[250px] w-full top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex" >
                             <li class="group">
                                 <a href="#experience" class="text-base text-dark py-2 mx-8 group-hover:opacity-50  ease-in-out capitalize
@@ -49,7 +49,7 @@
                                 hover:before:opacity-100">Experience</a>
                             </li>
                             <li class="group">
-                                <a href="#portfolio" class="text-base text-dark py-2   group-hover:opacity-50  ease-in-out capitalize
+                                <a href="#portfolio" class="text-base text-dark py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
@@ -95,7 +95,7 @@
                                 hover:before:opacity-100">Service</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base text-dark py-2  group-hover:opacity-50  ease-in-out capitalize
+                                <a href="#about" class="text-base text-dark py-2 mx-8 group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
