--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -50,7 +50,7 @@
                                 hover:before:opacity-100">Experience</a>
                             </li>
                             <li class="group">
-                                <a href="index.html#portfolio" class="text-base text-dark py-2   group-hover:opacity-50  ease-in-out capitalize
+                                <a href="index.html#portfolio" class="text-base text-dark py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
@@ -96,7 +96,7 @@
                                 hover:before:opacity-100">Service</a>
                             </li>
                             <li class="group">
-                                <a href="index.html#about" class="text-base text-dark py-2   group-hover:opacity-50  ease-in-out capitalize
+                                <a href="index.html#about" class="text-base text-dark py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
