--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
             <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full px-6 pt-4 pb-6 lg:w-1/3 lg:rounded-br-none">
                 <h3 class="font-semibold mb-2 bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text text-2xl">Experience</h3>
                 <p class="font-semibold text-base text-slate-500 max-w-xl ">PaDi UMKM</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Apr 2023 - Present (Jakarta)</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl">Product Designer</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Present (Jakarta)</p>
                 <p class="font-semibold text-base text-slate-500 max-w-xl">Telkom Indonesia</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sep 2022 - Feb 2023 (Jakarta)</p>
                 <p class="font-semibold text-base text-slate-500 max-w-xl">Jatis Mobile</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - Mei 2022 (Jakarta)</p>
-                <a href="https://drive.google.com/file/d/1EGXENv0_JnhBAOPCfDEEzS5dMP9_zXiX/view?usp=share_link" target="_blank" class="hover:opacity-50 mr-4 transition duration-300 ease-in-out capitalize
+                <a href="https://drive.google.com/file/d/1efRB2Ss9QLXuaebpRnSOQUZJHdVR0OtL/view?usp=sharing" target="_blank" class="hover:opacity-50 mr-4 text-slate-500 transition duration-300 ease-in-out capitalize
                 inline-block
                 relative
                 cursor-pointer
@@ -240,7 +240,7 @@
     <!-- portfolio start-->
 
         <!-- portfolio 1 start -->
-        <div id="portfolio" class="h-screen bg-fixed flex  justify-center items-center bg-auto lg:bg-cover" 
+        <div id="portfolio" class="h-screen bg-fixed flex px-4 justify-center items-center bg-auto lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/1.png)">
 
         <div class="container">
@@ -277,7 +277,7 @@
         <!-- portfolio 1 end -->
 
         <!-- portfolio 2 start -->
-        <div id="portfolio2" class="h-screen bg-fixed flex  justify-center items-center bg-auto lg:bg-cover" 
+        <div id="portfolio2" class="h-screen bg-fixed flex px-4 justify-center items-center bg-auto lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/2.png)">
         <div class="container">
 
@@ -311,7 +311,7 @@
         <!-- portfolio 2 end -->
 
         <!-- portfolio 3 start -->
-        <div id="portfolio3" class="h-screen bg-fixed flex  justify-center items-center bg-auto lg:bg-cover" 
+        <div id="portfolio3" class="h-screen bg-fixed flex px-4 justify-center items-center bg-auto lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/3.png)">
         <div class="container">
 
@@ -389,7 +389,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text text-2xl mb-2">Who am I?</h3>
-                    <p class="font-medium text-base text-slate-500 max-w-xl mb-4 lg:mb-0">I'm an Indonesia-based UI/UX designer with information system background. I started out my UI/UX journey ±2 years ago, while being fascinated with all aspects of UI/UX design, i have specialize in ideation, prototyping and visual design. And also, as a person who is passionate in user experience design, i really love diving into why and how people use things.</p>
+                    <p class="font-medium text-base text-slate-500 max-w-xl mb-4 lg:mb-0">I'm an Indonesia-based UI/UX designer with information system background. I started out my journey ±2 years ago, while being fascinated with all aspects of human computer interaction, i have specialize in ideation, prototyping and visual design. And also, as a person who is passionate in user experience design, i really love diving into why and how people use things.</p>
                     </a>
                 </div>
                 <div class="w-full px-4 lg:w-1/2 lg:mt-0">
