--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 
                 <p class="font-thin font-mono text-xs text-slate-500">Portfolio/</p>
-                <p class="font-semibold text-4xl text-dark">Redesign Transaction Detail Padi UMKM Seller</p>
+                <p class="font-semibold text-4xl text-dark">Redesign Transaction Detail Page Padi UMKM Seller</p>
 
                 <div class="flex">
                 <a href="revamp-transaction-detail-padiumkm.html" target="" class="flex items-center hover:shadow-lg hover:opacity-50 mr-4 transition duration-300 ease-in-out rounded-lg">
