--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -142,7 +142,7 @@
                     </div>
 
                     <div class="space-y-2">
-                    <h3 class="font-semibold text-4xl text-dark">Redesign Transaction Detail Padi UMKM Seller</h3>
+                    <h3 class="font-semibold text-4xl text-dark">Redesign Transaction Detail Page Padi UMKM Seller</h3>
                     <div class="flex items-center mb-0">
                         <!-- chevron -->
                         <a href="https://seller.padiumkm.id/register" target="_blank" class=" flex items-center hover:shadow-lg hover:opacity-50 mr-4 transition duration-300 ease-in-out rounded-lg">
