--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 hover:before:opacity-100">Service</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base text-dark py-2 mx-8 group-hover:opacity-50  ease-in-out capitalize
+                                <a href="#about" class="text-base text-dark py-2 mx-8 lg:mx-0 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
