add github link, adjust date

--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
                 <h3 class="font-semibold mb-2 bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text text-2xl">Experience</h3>
                 <p class="font-semibold text-base text-slate-500 max-w-xl ">PaDi UMKM</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">Product Designer</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Present (Jakarta)</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2023 - Present (Jakarta)</p>
                 <p class="font-semibold text-base text-slate-500 max-w-xl">Telkom Indonesia</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Feb 2023 (Jakarta)</p>
                 <p class="font-semibold text-base text-slate-500 max-w-xl">Jatis Mobile</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - Mei 2022 (Jakarta)</p>
-                <a href="https://drive.google.com/file/d/1efRB2Ss9QLXuaebpRnSOQUZJHdVR0OtL/view?usp=sharing" target="_blank" class="hover:opacity-50 mr-4 text-slate-500 transition duration-300 ease-in-out capitalize
+                <a href="https://drive.google.com/file/d/1JV29GHAoSmzKd_If-RMxrK-95E03CJWr/view?usp=sharing" target="_blank" class="hover:opacity-50 mr-4 text-slate-500 transition duration-300 ease-in-out capitalize
                 inline-block
                 relative
                 cursor-pointer
@@ -230,6 +230,10 @@
                         <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Dribble</title><path d="M12 24C5.385 24 0 18.615 0 12S5.385 0 12 0s12 5.385 12 12-5.385 12-12 12zm10.12-10.358c-.35-.11-3.17-.953-6.384-.438 1.34 3.684 1.887 6.684 1.992 7.308 2.3-1.555 3.936-4.02 4.395-6.87zm-6.115 7.808c-.153-.9-.75-4.032-2.19-7.77l-.066.02c-5.79 2.015-7.86 6.025-8.04 6.4 1.73 1.358 3.92 2.166 6.29 2.166 1.42 0 2.77-.29 4-.814zm-11.62-2.58c.232-.4 3.045-5.055 8.332-6.765.135-.045.27-.084.405-.12-.26-.585-.54-1.167-.832-1.74C7.17 11.775 2.206 11.71 1.756 11.7l-.004.312c0 2.633.998 5.037 2.634 6.855zm-2.42-8.955c.46.008 4.683.026 9.477-1.248-1.698-3.018-3.53-5.558-3.8-5.928-2.868 1.35-5.01 3.99-5.676 7.17zM9.6 2.052c.282.38 2.145 2.914 3.822 6 3.645-1.365 5.19-3.44 5.373-3.702-1.81-1.61-4.19-2.586-6.795-2.586-.825 0-1.63.1-2.4.285zm10.335 3.483c-.218.29-1.935 2.493-5.724 4.04.24.49.47.985.68 1.486.08.18.15.36.22.53 3.41-.43 6.8.26 7.14.33-.02-2.42-.88-4.64-2.31-6.38z"/></svg>                        
                     </a>
 
+                    <!-- github -->
+                    <a href="https://github.com/fransfirmansyah10" target="_blank" class="hover:shadow-lg hover:opacity-50 mr-4 transition duration-300 ease-in-out">
+                        <svg role="img" width="26" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Github</title><path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path></svg>                        
+                    </a>
                 </div>
             </div>
         </div>
