--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <section id="experience" class="pt-32 pb-32 ">
     <div class="container">
         <div class="flex flex-wrap px-4 space-y-8 lg:space-y-0">
-            <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full px-6 pt-4 pb-6 lg:w-1/3 lg:rounded-br-none">
+            <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full px-6 pt-4 pb- lg:w-1/3 lg:rounded-br-none">
                 <h3 class="font-semibold mb-2 bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text text-2xl">Experience</h3>
                 <p class="font-semibold text-base text-slate-500 max-w-xl ">PaDi UMKM</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">Product Designer</p>
@@ -228,7 +228,7 @@
 
         <div class="container">
 
-            <div class="card hidden1 px-4 pt-4 space-y-2 w-full lg:w-1/2 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
+            <div class="card hidden1 px-6 pt-6 lg:px-4 space-y-2 w-full lg:w-1/2 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
 
 
 
@@ -247,7 +247,7 @@
                 </div>
 
                 <div class="flex">
-                <a href="index.html#portfolio2" target="" class="items-center hover:shadow-lg hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
+                <a href="index.html#portfolio2" target="" class="items-center hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
                     <svg role="img" width="62" class="fill-current" xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 16 16" id="chevron-down"><path fill="#212121" d="M4.14645,5.64645 C4.34171,5.45118 4.65829,5.45118 4.85355,5.64645 L7.9999975,8.79289 L11.1464,5.64645 C11.3417,5.45118 11.6583,5.45118 11.8536,5.64645 C12.0488,5.84171 12.0488,6.15829 11.8536,6.35355 L8.35355,9.85355 C8.15829,10.0488 7.84171,10.0488 7.64645,9.85355 L4.14645,6.35355 C3.95118,6.15829 3.95118,5.84171 4.14645,5.64645 Z"></path></svg>
                 </a>
                 </div>
@@ -264,10 +264,10 @@
         style="background-image: url(dist/img/porto-bg/2.png)">
         <div class="container">
 
-            <div class="card hidden1 px-4 space-y-2 w-full lg:w-1/2 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
+            <div class="card hidden1 px-6 lg:px-4 space-y-2 w-full lg:w-1/2 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
             
             <div class="flex">
-            <a href="index.html#portfolio" target="" class="  items-center hover:shadow-lg hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
+            <a href="index.html#portfolio" target="" class="  items-center hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
                 <svg role="img" width="62" class="fill-current rotate-180 " xmlns="http://www.w3.org/2000/svg"  height="62" viewBox="0 0 16 16" id="chevron-down"><path fill="#212121" d="M4.14645,5.64645 C4.34171,5.45118 4.65829,5.45118 4.85355,5.64645 L7.9999975,8.79289 L11.1464,5.64645 C11.3417,5.45118 11.6583,5.45118 11.8536,5.64645 C12.0488,5.84171 12.0488,6.15829 11.8536,6.35355 L8.35355,9.85355 C8.15829,10.0488 7.84171,10.0488 7.64645,9.85355 L4.14645,6.35355 C3.95118,6.15829 3.95118,5.84171 4.14645,5.64645 Z"></path></svg>
             </a>
             </div>
@@ -282,7 +282,7 @@
             </div>
 
             <div class="flex">
-            <a href="index.html#portfolio3" target="" class="  items-center hover:shadow-lg hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
+            <a href="index.html#portfolio3" target="" class="  items-center hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
                 <svg role="img" width="62" class="fill-current " xmlns="http://www.w3.org/2000/svg" width="62" height="62" viewBox="0 0 16 16" id="chevron-down"><path fill="#212121" d="M4.14645,5.64645 C4.34171,5.45118 4.65829,5.45118 4.85355,5.64645 L7.9999975,8.79289 L11.1464,5.64645 C11.3417,5.45118 11.6583,5.45118 11.8536,5.64645 C12.0488,5.84171 12.0488,6.15829 11.8536,6.35355 L8.35355,9.85355 C8.15829,10.0488 7.84171,10.0488 7.64645,9.85355 L4.14645,6.35355 C3.95118,6.15829 3.95118,5.84171 4.14645,5.64645 Z"></path></svg>
             </a>
             </div>
@@ -298,10 +298,10 @@
         style="background-image: url(dist/img/porto-bg/3.png)">
         <div class="container">
 
-            <div class="card hidden1 px-4 space-y-2 w-full lg:w-1/2 pb-4 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
+            <div class="card hidden1 px-6 lg:px-4 space-y-2 w-full lg:w-1/2 pb-6 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
             
             <div class="flex">
-            <a href="index.html#portfolio2" target="" class="  items-center hover:shadow-lg hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
+            <a href="index.html#portfolio2" target="" class="  items-center hover:opacity-50  transition duration-300 ease-in-out rounded-lg">
                     <svg role="img" width="62" class="fill-current rotate-180 " xmlns="http://www.w3.org/2000/svg"  height="62" viewBox="0 0 16 16" id="chevron-down"><path fill="#212121" d="M4.14645,5.64645 C4.34171,5.45118 4.65829,5.45118 4.85355,5.64645 L7.9999975,8.79289 L11.1464,5.64645 C11.3417,5.45118 11.6583,5.45118 11.8536,5.64645 C12.0488,5.84171 12.0488,6.15829 11.8536,6.35355 L8.35355,9.85355 C8.15829,10.0488 7.84171,10.0488 7.64645,9.85355 L4.14645,6.35355 C3.95118,6.15829 3.95118,5.84171 4.14645,5.64645 Z"></path></svg>
             </a>
             </div>
