--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
         <div class="container">
 
-            <div class="card hidden1 px-6 pt-6 lg:px-4 space-y-2 w-full lg:w-1/2 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
+            <div class="card hidden1 px-6 lg:px-4 pt-6 space-y-2  w-full lg:w-1/2 rounded-md bg-white bg-opacity-70 lg:bg-opacity-0">
 
 
 
