--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             <div class="flex flex-wrap">
                 <div class="card hidden1 w-full self-center  px-4 lg:w-1/2">
                     <h1 class="block font-bold text text-4xl mt-1 lg:text-5xl bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text">Frans Firmansyah</h1>
-                    <h2 class="font-medium text-slate-500 text-lg lg:text-2xl">UI/UX Designer</h2>
-                    <p class="font-thin text-slate-400 mb-7 mt-6 leading-relaxed lg:text-xl">With solid foundations such as <span class="font-semibold text-slate-500"> design thinking</span> and <span class="font-semibold text-slate-500">critical thinking,</span> i will help you to solve your business or digital product problems.</p>
+                    <h2 class="font-normal text-slate-500 text-lg lg:text-2xl">UI/UX Designer</h2>
+                    <p class="font-thin text-slate-500 mb-8 mt-6 leading-relaxed lg:text-xl">With solid foundations such as <span class="font-semibold text-slate-600"> design thinking</span> and <span class="font-semibold text-slate-500">critical thinking,</span> i will help you to solve your business or digital product problems.</p>
                     <div class="max-w-xl text-center mb-16">   
                         <div class="flex items-center">
                             <a href="https://drive.google.com/file/d/1JV29GHAoSmzKd_If-RMxrK-95E03CJWr/view?usp=sharing" target="_blank" class="text-base font-semibold text-white bg-black py-3 px-8 rounded-full hover:shadow-lg hover:bg-gradient-to-r from-pink-600 to-amber-300 mr-4 transition duration-300 ease-in-out hover:translate-y-2">📑 Download CV
@@ -157,13 +157,13 @@
         <div class="flex flex-wrap px-4 space-y-8 lg:space-y-0">
             <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full px-6 pt-4 pb- lg:w-1/3 lg:rounded-br-none">
                 <h3 class="font-semibold mb-2 bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text text-2xl">Experience</h3>
-                <p class="font-semibold text-base text-slate-500 max-w-xl ">PaDi UMKM</p>
+                <p class="font-semibold text-base text-dark max-w-xl ">PaDi UMKM</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">Product Designer</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2023 - Present (Jakarta)</p>
-                <p class="font-semibold text-base text-slate-500 max-w-xl">Telkom Indonesia</p>
+                <p class="font-semibold text-base text-dark max-w-xl">Telkom Indonesia</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Feb 2023 (Jakarta)</p>
-                <p class="font-semibold text-base text-slate-500 max-w-xl">Jatis Mobile</p>
+                <p class="font-semibold text-base text-dark max-w-xl">Jatis Mobile</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - Mei 2022 (Jakarta)</p>
             </div>
