--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <!-- portfolio 1 end -->
 
         <!-- portfolio 2 start -->
-        <div id="portfolio2" class="h-screen bg-fixed flex px-4 justify-center items-center bg-auto lg:bg-cover" 
+        <div id="portfolio2" class="h-screen bg-fixed flex px-4 justify-center items-center bg-contain lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/4.png)">
         <div class="container">
 
