--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!-- portfolio start-->
 
         <!-- portfolio 1 start -->
-        <div id="portfolio" class="h-screen bg-fixed flex px-4 justify-center items-center bg-cover" 
+        <div id="portfolio" class="h-screen bg-fixed flex px-4 justify-center items-center bg-contain lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/1.png)">
 
         <div class="container">
@@ -260,7 +260,7 @@
         <!-- portfolio 1 end -->
 
         <!-- portfolio 2 start -->
-        <div id="portfolio2" class="h-screen bg-fixed flex px-4 justify-center items-center bg-cover" 
+        <div id="portfolio2" class="h-screen bg-fixed flex px-4 justify-center items-center bg-contain lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/4.png)">
         <div class="container">
 
@@ -294,7 +294,7 @@
         <!-- portfolio 2 end -->
 
         <!-- portfolio 3 start -->
-        <div id="portfolio3" class="h-screen bg-fixed flex px-4 justify-center items-center bg-cover" 
+        <div id="portfolio3" class="h-screen bg-fixed flex px-4 justify-center items-center bg-contain lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/2.png)">
         <div class="container">
 
@@ -328,7 +328,7 @@
         <!-- portfolio 3 end -->
 
         <!-- portfolio 4 start -->
-        <div id="portfolio4" class="h-screen bg-fixed flex px-4 justify-center items-center bg-cover" 
+        <div id="portfolio4" class="h-screen bg-fixed flex px-4 justify-center items-center bg-contain lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/3.png)">
         <div class="container">
 
