--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <div class="w-full px-4 lg:w-1/2 lg:mt-0">
                     <div class="flex items-center gap-4 w-full">
                         <img class="card hidden1 rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 1.png" alt="Frans Firmansyah">
-                        <img class="card hidden1 rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about.jpeg" alt="Frans Firmansyah">
+                        <img class="card hidden1 rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about.png" alt="Frans Firmansyah">
                         <img class="card hidden1 rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 3.png" alt="Frans Firmansyah">
                     </div>
                 </div>
