--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="card hidden1 w-full self-center  px-4 lg:w-1/2">
                     <h1 class="block font-bold text text-4xl mt-1 lg:text-5xl bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text">Frans Firmansyah</h1>
                     <h2 class="font-normal text-slate-500 text-lg lg:text-2xl">UI/UX Designer</h2>
-                    <p class="font-thin text-slate-500 mb-8 mt-6 leading-relaxed lg:text-xl">With solid foundations such as <span class="font-semibold text-slate-600"> design thinking</span> and <span class="font-semibold text-slate-500">critical thinking,</span> i will help you to solve your business or digital product problems.</p>
+                    <p class="font-thin text-slate-500 mb-8 mt-6 leading-relaxed lg:text-xl">With solid foundations such as <span class="font-semibold text-slate-600"> design thinking</span> and <span class="font-semibold text-slate-500">critical thinking,</span> I am passionate about contributing to the creation of seamless experiences for users by addressing their problems.</p>
                     <div class="max-w-xl text-center mb-16">   
                         <div class="flex items-center">
                             <a href="https://drive.google.com/file/d/1JV29GHAoSmzKd_If-RMxrK-95E03CJWr/view?usp=sharing" target="_blank" class="text-base font-semibold text-white bg-black py-3 px-8 rounded-full hover:shadow-lg hover:bg-gradient-to-r from-pink-600 to-amber-300 mr-4 transition duration-300 ease-in-out hover:translate-y-2">📑 Download CV
