--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 </div>
                 <div class="w-full pt-10 " >
                     <div class="flex items-center justify-center mb- text-white">
-                    <p class="font-thin text-xs text-slate-400">Made with ❤️ by <span>
+                    <p class="font-thin text-xs text-slate-400">Made from scratch with ❤️ by <span>
                     <a href="https://www.linkedin.com/in/fransfirmansyah/" target="_blank" class="
                     inline-block
                     relative
