--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <!-- portfolio start-->
 
         <!-- portfolio 1 start -->
-        <div id="portfolio" class="h-screen bg-fixed flex px-4 justify-center items-center bg-auto lg:bg-cover" 
+        <div id="portfolio" class="h-screen relative bg-fixed flex px-4 justify-center items-center bg-auto lg:bg-cover" 
         style="background-image: url(dist/img/porto-bg/1.png)">
 
         <div class="container">
