--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <p class="font-thin text-slate-500 mb-8 mt-6 leading-relaxed lg:text-xl">With solid foundations such as <span class="font-semibold text-slate-600"> design thinking</span> and <span class="font-semibold text-slate-500">critical thinking,</span> my passion is helping transform user problems into seamless experiences.</p>
                     <div class="max-w-xl text-center mb-16">   
                         <div class="flex items-center">
-                            <a href="https://drive.google.com/file/d/1JV29GHAoSmzKd_If-RMxrK-95E03CJWr/view?usp=sharing" target="_blank" class="text-base font-semibold text-white bg-black py-3 px-8 rounded-full hover:shadow-lg hover:bg-gradient-to-r from-pink-600 to-amber-300 mr-4 transition duration-300 ease-in-out hover:translate-y-2">📑 Download CV
+                            <a href="https://drive.google.com/file/d/1b1T4VpjkPMMb38p1jQPahk1h_qcVUg3N/view?usp=sharing" target="_blank" class="text-base font-semibold text-white bg-black py-3 px-8 rounded-full hover:shadow-lg hover:bg-gradient-to-r from-pink-600 to-amber-300 mr-4 transition duration-300 ease-in-out hover:translate-y-2">📑 Download CV
                             </a>
                         </div>
                     </div>
@@ -166,6 +166,9 @@
                 <p class="font-semibold text-base text-dark max-w-xl">Jatis Mobile</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - Mei 2022 (Jakarta)</p>
+                <p class="font-semibold text-base text-dark max-w-xl">ESQ Store</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2021 - Feb 2022 (Jakarta)</p>
             </div>
             <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full space-y-2 px-6 pb-6 pt-4 lg:w-1/3 lg:rounded-br-none lg:rounded-bl-none">
                 <h3 class="font-semibold bg-gradient-to-r from-pink-600 to-amber-300 text-transparent bg-clip-text text-2xl">Expertise</h3>
