--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Feb 2023 (Jakarta)</p>
                 <p class="font-semibold text-base text-dark max-w-xl">Jatis Mobile</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - Mei 2022 (Jakarta)</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - May 2022 (Jakarta)</p>
                 <p class="font-semibold text-base text-dark max-w-xl">ESQ Store</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2021 - Feb 2022 (Jakarta)</p>
