--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- header start -->
-    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10 text-red-600">
+    <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
@@ -382,8 +382,9 @@
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Software I'm fluent in</h3>
                     <p class="font-normal text-slate-500 ">● Figma</p>
                     <p class="font-normal text-slate-500 ">● Adobe XD</p>
+                    <p class="font-normal text-slate-500 ">● Marvel</p>
+                    <p class="font-normal text-slate-500 ">● Maze</p>
                     <p class="font-normal text-slate-500 ">● Jira</p>
-                    <p class="font-normal text-slate-500 ">● Notion</p>
                 </div>
                 <div class="card hidden1 px-4 md:w-1/3">
                     <div class="rounded-md  overflow-hidden">
