--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="index.html#work" class="font-bold text-black text-lg block py-6">
+                    <a href="index.html" class="font-bold text-black text-lg block py-6">
                         <img src="dist/img/logo/logo.png" width="30" alt="">
                     </a>
                 </div>
@@ -114,7 +114,7 @@
 
                     <div class="flex items-center mb-0">
                         <!-- chevron -->
-                        <a href="index.html#portfolio" target="" class=" flex items-center hover:shadow-lg hover:opacity-50 mr-4 transition duration-300 ease-in-out rounded-lg">
+                        <a href="index.html#work" target="" class=" flex items-center hover:shadow-lg hover:opacity-50 mr-4 transition duration-300 ease-in-out rounded-lg">
                             <svg role="img" width="20" class="fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" id="left"><path fill="#ef4444" d="M42.768 48.232a2.5 2.5 0 1 1-3.536 3.536l-18-18a2.5 2.5 0 0 1 0-3.536l18-18a2.5 2.5 0 0 1 3.536 3.536L26.535 32Z" data-name="Left" class="color222222 svgShape"></path></svg>
                             <p class="font-normal text-base text-red-600">Back</p>
                         </a>
@@ -191,7 +191,7 @@
 
         <!-- solution start -->
         <section id="" class="bg-gradient-to-r from-slate-100 to-white">
-    <div class="container w-full lg:w-1/2">
+        <div class="container w-full lg:w-1/2">
         <div class="flex flex-wrap justify-center">
             <div class="space-y-8 px-4">
 
