--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -527,7 +527,7 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">   
-                    <svg xmlns="http://www.w3.org/2000/svg" id="arrow" x="0" y="0" width="50" class="mx-auto animate-bounce" version="1.1" viewBox="0 0 29 29" xml:space="preserve"><path fill="none" stroke="#fde047" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="m20.5 11.5-6 6-6-6"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="arrow" x="0" y="0" width="50" class="mx-auto animate-bounce" version="1.1" viewBox="0 0 29 29" xml:space="preserve"><path fill="none" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="m20.5 11.5-6 6-6-6"></path></svg>
                     <h3 class="font-semibold text-white text-2xl mb-3 pt-1 ">Reach Out</h3>
                     <p class="font-thin text-base text-white mb-3 max-w-xl ">Interested in working together with me? I'd love to hear from you.</p>
                     <div class="flex items-center justify-center">
