--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="card hidden1 w-full self-center px-4">
 
                     <h2 class="font-semibold text-black text-lg lg:text-2xl">👋 I'm Frans,</h2>
-                    <h1 class="mt-6 block font-bold text-4xl lg:text-5xl bg-gradient-to-r from-blue-600 to-yellow-200 text-transparent bg-clip-text">UI/UX Designer Improving People's Lives Through Meaningful Design.</h1>
+                    <h1 class="mt-6 block font-bold text-4xl lg:text-5xl bg-gradient-to-r from-blue-600 to-yellow-200 text-transparent bg-clip-text">UI/UX Designer dedicated to improving people's lives through meaningful design.</h1>
                     
                     <div class="flex mb-6">
                     <a href="https://drive.google.com/file/d/1b1T4VpjkPMMb38p1jQPahk1h_qcVUg3N/view?usp=sharing" target="_blank" class="items-center hover:opacity-50 mr-4 transition mt-6 duration-300 ease-in-out capitalize
