--- a/index.html
+++ b/index.html
@@ -230,6 +230,46 @@
     </section>
     <!-- work end -->
 
+
+    <!-- COROUSEL START -->
+    <div class="logos justify-center">
+            <div class="logos-slide">
+            <div class="flex">
+            <h1 class="text-4xl">Design System</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Research</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Visual Design</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Prototype</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Usability Testing</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Design Audit</h1>
+            <h1 class="text-4xl">*</h1>
+            </div>
+            </div>
+        
+            <div class="logos-slide">
+            <div class="flex">
+            <h1 class="text-4xl">Design System</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Research</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Visual Design</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Prototype</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Usability Testing</h1>
+            <h1 class="text-4xl">*</h1>
+            <h1 class="text-4xl">Design Audit</h1>
+            <h1 class="text-4xl">*</h1>
+            </div>
+            </div>
+
+      </div>
+    <!-- COROUSEL END -->
+
     <!-- footer start -->
     <footer class="pt-32 pb-8 bg-blue-600">
         <div class="container">
