--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
     <!-- header end -->
     
     <!-- about start -->
-    <section id="" class="pt-32 pb-32 lg:pt-56 bg-auto lg:bg-cover bg-fixed" style="background-image: url(dist/img/bg.png)">
+    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed" style="background-image: url(dist/img/bg.png)">
         <div class="container hidden1 ">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 lg:w-1/2">
