--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h3 class="font-semibold text-black text-2xl mb-3 pt-1 ">Selected Works</h3>
-                    <p class="font-thin text-base text-slate-500 max-w-xl ">I create user centered design solutions to delight and solve real user needs</p>
+                    <p class="font-thin text-base text-slate-500 max-w-xl ">I create user centered design solutions to solve real user problems and achieve business goals</p>
                 </div>
 
                 <!-- portfolio start(KONTEN)-->
@@ -232,38 +232,38 @@
 
 
     <!-- COROUSEL START -->
-    <div class="logos justify-center">
+    <div class="logos justify-center text-slate-500">
             <div class="logos-slide">
             <div class="flex">
             <h1 class="text-4xl">Design System</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Research</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Visual Design</h1>
-            <h1 class="text-4xl">*</h1>
-            <h1 class="text-4xl">Prototype</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
+            <h1 class="text-4xl">Prototyping</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Usability Testing</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Design Audit</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             </div>
             </div>
         
             <div class="logos-slide">
             <div class="flex">
             <h1 class="text-4xl">Design System</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Research</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Visual Design</h1>
-            <h1 class="text-4xl">*</h1>
-            <h1 class="text-4xl">Prototype</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
+            <h1 class="text-4xl">Prototyping</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Usability Testing</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             <h1 class="text-4xl">Design Audit</h1>
-            <h1 class="text-4xl">*</h1>
+            <h1 class="text-6xl">*</h1>
             </div>
             </div>
 
