--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="index.html" class="font-bold text-black text-lg block py-6">
+                    <a href="/" class="font-bold text-black text-lg block py-6">
                         <img src="dist/img/logo/logo.png" width="30" alt="">
                     </a>
                 </div>
@@ -201,8 +201,47 @@
     </section>
     <!-- experience end -->
 
+    <!-- COROUSEL START -->
+    <div class="logos justify-center text-white">
+        <div class="logos-slide">
+        <div class="flex">
+        <h1 class="text-4xl">Critical Thinking</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Communication</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Creativity</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Time Management</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Adaptability</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Organizational</h1>
+        <h1 class="text-6xl">*</h1>
+        </div>
+        </div>
+    
+        <div class="logos-slide">
+        <div class="flex">
+        <h1 class="text-4xl">Critical Thinking</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Communication</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Creativity</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Time Management</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Adaptability</h1>
+        <h1 class="text-6xl">*</h1>
+        <h1 class="text-4xl">Organizational</h1>
+        <h1 class="text-6xl">*</h1>
+        </div>
+        </div>
+
+    </div>
+    <!-- COROUSEL END -->
+
     <!-- connect start -->
-    <section id="" class="pb-32 ">
+    <section id="" class="pb-32 pt-32">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="card hidden1 w-full self-center px-4 lg:w-1/2">
