--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="index.html" class="font-bold text-black text-lg block py-6">
+                    <a href="/" class="font-bold text-black text-lg block py-6">
                         <img src="dist/img/logo/logo.png" width="30" alt="">
                     </a>
                 </div>
