--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                                 hover:before:opacity-100">Work</a>
                             </li>
                             <li class="group">
-                                <a href="about.html" class="text-base text-dark py-2 mx-8 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
+                                <a href="about.html" class="text-base text-dark font-extrabold py-2 mx-8 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
