--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex" >
                             <li class="group">
-                                <a href="#work" class="text-base text-dark py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
+                                <a href="#work" class="text-base text-dark font-extrabold py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
