--- a/about.html
+++ b/about.html
@@ -106,9 +106,9 @@
     <!-- header end -->
     
     <!-- about start -->
-    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed" style="background-image: url(dist/img/bg.png)">
+    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/bg.png)">
         <div class="container hidden1 ">
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap py-4 mx-4 lg:mx-0 lg:py-0 rounded-lg bg-white bg-opacity-80 shadow-lg lg:shadow-none lg:bg-transparent">
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold bg-gradient-to-r from-blue-600 to-yellow-200 text-transparent bg-clip-text text-2xl mb-2">Who am I?</h3>
                     <p class="font-medium text-base text-slate-500 max-w-xl mb-4">I'm an Indonesia-based UI/UX designer with information system background. I started out my journey ±2 years ago, while being fascinated with all aspects of human computer interaction, i have specialize in ideation, prototyping and visual design. And also, i have basic knowledge about HTML and CSS.</p>
