--- a/about.html
+++ b/about.html
@@ -240,6 +240,55 @@
     </div>
     <!-- COROUSEL END -->
 
+    <!-- another start-->
+    <section id="work" class="pt-32 pb-32 bg-gradient-to-r from-blue-50 to-white">
+        <div class="container">
+            <div class="w-full px-4">
+
+                <div class="max-w-xl mx-auto text-center mb-16">
+                    <h3 class="font-semibold text-blue-600 text-2xl mb-3 pt-1 ">What else I do?</h3>
+                    <p class="font-thin text-base text-slate-500 max-w-xl ">I do 3D stuff since 2020, creating 3D art can sharpen creativity by offering a dynamic and multidimensional canvas for artistic expression</p>
+                </div>
+
+                <!-- portfolio start(KONTEN)-->
+                <div class="grid lg:grid-cols-3 gap-x-4 gap-y-4 grid-cols-1">
+
+                    <div class="">
+                        <img src="dist/img/ANOTHER/7.png" class="rounded-2xl" alt="">
+                    </div>
+
+                    <div class="">
+                        <img src="dist/img/ANOTHER/5.png" class="rounded-2xl" alt="">
+                    </div>
+
+                    <div class="">
+                        <img src="dist/img/ANOTHER/3.png" class="rounded-2xl" alt="">
+                    </div>
+
+                    <div class="">
+                        <img src="dist/img/ANOTHER/1.png" class="rounded-2xl" alt="">
+                    </div>
+
+                    <div class="">
+                        <img src="dist/img/ANOTHER/2.png" class="rounded-2xl" alt="">
+                    </div>
+
+                    <div class="">
+                        <img src="dist/img/ANOTHER/8.png" class="rounded-2xl" alt="">
+                    </div>
+
+                    <div class="lg:col-span-3">
+                        <img src="dist/img/ANOTHER/4.png" class="rounded-2xl" alt="">
+                    </div>
+
+                </div>
+                <!-- portfolio start(KONTEN)-->
+
+            </div>
+        </div>
+    </section>
+    <!-- another end -->
+
     <!-- connect start -->
     <section id="" class="pb-32 pt-32">
         <div class="container">
