--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
 
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h3 class="font-semibold text-blue-600 text-2xl mb-3 pt-1 ">What else I do?</h3>
-                    <p class="font-thin text-base text-slate-500 max-w-xl ">I do 3D stuff since 2020, creating 3D art can sharpen creativity by offering a dynamic and multidimensional canvas for artistic expression</p>
+                    <p class="font-thin text-base text-slate-500 max-w-xl ">I do 3D stuff since 2020 in my free time, creating 3D art can sharpen my creativity by offering a dynamic and multidimensional canvas for artistic expression</p>
                 </div>
 
                 <!-- portfolio start(KONTEN)-->
