--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
     <!-- hero section end -->
 
     <!-- COROUSEL START -->
-    <div class="logos justify-center text-white">
+    <div class="logos text-white">
+
         <div class="logos-slide">
         <div class="flex">
+        <h1 class="text-6xl">*</h1>
         <h1 class="text-4xl">Design System</h1>
         <h1 class="text-6xl">*</h1>
         <h1 class="text-4xl">Research</h1>
@@ -164,12 +166,12 @@
         <h1 class="text-4xl">Usability Testing</h1>
         <h1 class="text-6xl">*</h1>
         <h1 class="text-4xl">Design Audit</h1>
-        <h1 class="text-6xl">*</h1>
         </div>
         </div>
     
         <div class="logos-slide">
         <div class="flex">
+        <h1 class="text-6xl">*</h1>
         <h1 class="text-4xl">Design System</h1>
         <h1 class="text-6xl">*</h1>
         <h1 class="text-4xl">Research</h1>
@@ -181,7 +183,6 @@
         <h1 class="text-4xl">Usability Testing</h1>
         <h1 class="text-6xl">*</h1>
         <h1 class="text-4xl">Design Audit</h1>
-        <h1 class="text-6xl">*</h1>
         </div>
         </div>
 
