--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -560,7 +560,7 @@
             <div class="flex flex-wrap place-content-between px-4 py-4 my-4 mx-4 border-solid border-2 rounded-md border-blue-500">
 
                     <p>Thank</p>
-                    <p>You!</p>
+                    <p>You</p>
                 
             </div>
     </div>
