--- a/revamp-transaction-detail-padiumkm.html
+++ b/revamp-transaction-detail-padiumkm.html
@@ -29,7 +29,7 @@
                     <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex" >
                             <li class="group">
-                                <a href="index.html#work" class="text-base text-dark font-extrabold py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
+                                <a href="/#work" class="text-base text-dark font-extrabold py-2 mx-8  group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
@@ -108,8 +108,8 @@
 
 
     <!-- SIDEBAR start -->
-    <div class="hidden1 bottom-0 items-center sidebar mt-32 fixed lg:left-0 left-[-300px] duration-1000 px-6 py-4 w-[200px] bg-gradient-to-r from-slate-100 to-blue-50 opacity-20 blur-3xl rounded-tr-lg rounded-br-lg">
-    <div class="text-slate-500 text-sm space-y-2">
+    <div class="hidden1 bottom-0 m-6 shadow-sm items-center sidebar mt-32 fixed lg:left-0 left-[-300px] duration-1000 px-6 py-4 w-[200px] bg-gradient-to-r from-slate-100 to-white opacity-20 blur-3xl rounded-tr-lg rounded-br-lg">
+    <div class="text-slate-500 items-center place-content-center text-sm space-y-2">
 
         <div class="flex items-center rounded-md duration-300">
         <a href="#problem" class="hover:text-blue-500">The Problem</a>
@@ -557,10 +557,39 @@
     <!-- Closing start -->
     <section id="" class="pt-32 pb-32 bg-gradient-to-r from-slate-100 to-white">
     <div class="container w-full lg:w-1/2">
-            <div class="flex flex-wrap place-content-between px-4 py-4 my-4 mx-4 border-solid border-2 rounded-md border-blue-500">
+            <div class="flex flex-wrap place-content-between px-4 py-4 my-4 mx-4 border-solid border-2 rounded-2xl border-blue-400">
 
+                    <div class="flex space-x-2 text-base">
                     <p>Thank</p>
-                    <p>You</p>
+                    <p>You!👋🚀</p>
+                    </div>
+
+                    <div class="flex items-center place-content-center">
+                        <a href="/#work" target="" class="items-center hover:opacity-50 mr-4 transition mt-6 duration-300 ease-in-out capitalize
+                        flex
+                        relative
+                        cursor-pointer
+                        before:content-['']
+                        before:absolute
+                        before:-bottom-2
+                        before:left-0
+                        before:w-0
+                        before:h-1.5
+                        before:rounded-full
+                        before:opacity-0
+                        before:transition-all
+                        before:duration-500
+                        before:bg-gradient-to-r
+                        before:from-blue-600
+                        before:to-blue-600
+                        hover:before:w-full
+                        hover:before:opacity-100">
+                        <div class="flex items-center transition duration-300 ease-in-out hover:translate-x-2">
+                            <p class="text-slate-500 pr-2">View Other Works</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="fill-current" width="18" height="14" id="arrow"><g fill="none" fill-rule="evenodd" stroke="#64748b" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M1 7h16M11 1l6 6-6 6"></path></g></svg>                
+                        </div>
+                        </a>
+                    </div>
                 
             </div>
     </div>
