--- a/landing-page-deaxpadi.html
+++ b/landing-page-deaxpadi.html
@@ -324,11 +324,11 @@
                                 <p class="font-normal text-base text-slate-500 mr-4">● </p>
                                 <p class="font-normal text-lg text-slate-500">It's okay to use components and styles from the PaDi UMKM design system library, including colors, buttons, and icons. However for the font, the Ministry of Communication and Information Technology prefers a font with the Jakarta Sans plus type.</p>
                             </div>
-
+                            <!--
                             <div class="space-y-4">
                                 <img class="w-full object-cover rounded-md shadow-sm" src="dist/img/landing-page-deaxpadi/2.png" alt="Landing Page" width="w-full">
                                 <p class="font-normal text-xs text-slate-500 text-center">Meeting Session </p>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
