--- a/landing-page-deaxpadi.html
+++ b/landing-page-deaxpadi.html
@@ -414,7 +414,7 @@
                         <h3 class="font-semibold text-xl text-dark">Sketch</h3>
                         <div class="items-center space-y-8">
         
-                            <p class="font-normal text-lg text-slate-500">I create sketches on paper, which makes it easier for me to explore designs without limitations compared to using digital media. In this process, I create and explore designs with some design options, there are 2 final design options that I will proceed to the next step.</p>
+                            <p class="font-normal text-lg text-slate-500">I create sketches on paper, which makes it easier for me to explore designs without limitations compared to using digital media. In this process, I explore design by considering the layout and placement of content on the landing page.</p>
                             
                             <div class="space-y-4">
                                 <img class="w-full object-cover rounded-md shadow-sm" src="dist/img/landing-page-deaxpadi/5.png" alt="Landing Page" width="w-full">
