--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h3 class="font-semibold text-black text-2xl mb-3 pt-1 ">Selected Works</h3>
-                    <p class="font-thin text-base text-slate-500 max-w-xl ">I create user centered design solutions to solve real user problems and achieve business goals</p>
+                    <p class="font-thin text-base text-slate-500 max-w-xl ">I create design solutions to solve real user problems and achieve business goals</p>
                 </div>
 
                 <!-- portfolio start(KONTEN)-->
