--- a/landing-page-deaxpadi.html
+++ b/landing-page-deaxpadi.html
@@ -75,7 +75,7 @@
                                 hover:before:opacity-100">About</a>
                             </li>
                             <li class="group">
-                                <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=frnsfrmnsyh10@gmail.com" target="_blank" class="text-base text-dark py-2 mx-8 lg:mx-0 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
+                                <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=frnsfrmnsyh10@gmail.com" target="_blank" class="lg:border-solid lg:border-2 lg:rounded-lg lg:px-4 lg:border-blue-200   text-base text-dark py-2 mx-8 lg:mx-0 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
