--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                                 hover:before:opacity-100">About</a>
                             </li>
                             <li class="group">
-                                <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=frnsfrmnsyh10@gmail.com" target="_blank" class="text-base text-dark py-2 mx-8 lg:mx-0 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
+                                <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=frnsfrmnsyh10@gmail.com" target="_blank" class="lg:border-solid lg:border-2 lg:rounded-lg lg:px-4 lg:border-blue-200   text-base text-dark py-2 mx-8 lg:mx-0 lg:ml-8 group-hover:opacity-50  ease-in-out capitalize
                                 inline-block
                                 relative
                                 cursor-pointer
@@ -106,7 +106,7 @@
     <!-- header end -->
     
     <!-- about start -->
-    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/bg.png)">
+    <section id="" class="hidden1 pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/bg.png)">
         <div class="container hidden1 ">
             <div class="flex flex-wrap py-4 mx-4 lg:mx-0 lg:py-0 rounded-lg bg-white bg-opacity-80 shadow-lg lg:shadow-none lg:bg-transparent">
                 <div class="w-full px-4 lg:w-1/2">
