--- a/landing-page-deaxpadi.html
+++ b/landing-page-deaxpadi.html
@@ -95,7 +95,7 @@
                                 before:from-blue-600
                                 before:to-blue-600
                                 hover:before:w-full
-                                hover:before:opacity-100">Contact Me</a>
+                                hover:before:opacity-100">Hire Me</a>
                             </li>
                         </ul>
                     </nav>
