--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                                 before:from-blue-600
                                 before:to-blue-600
                                 hover:before:w-full
-                                hover:before:opacity-100">Contact Me</a>
+                                hover:before:opacity-100">Hire Me</a>
                             </li>
                         </ul>
                     </nav>
@@ -106,10 +106,10 @@
     <!-- header end -->
     
     <!-- about start -->
-    <section id="" class="hidden1 pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/bg.png)">
-        <div class="container hidden1 ">
-            <div class="flex flex-wrap py-4 mx-4 lg:mx-0 lg:py-0 rounded-lg bg-white bg-opacity-80 shadow-lg lg:shadow-none lg:bg-transparent">
-                <div class="w-full px-4 lg:w-1/2">
+    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/bg.png)">
+        <div class="container ">
+            <div class="hidden1 flex flex-wrap py-4 mx-4 lg:mx-0 lg:py-0 rounded-lg bg-white bg-opacity-80 shadow-lg lg:shadow-none lg:bg-transparent">
+                <div class=" w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold bg-gradient-to-r from-blue-600 to-yellow-200 text-transparent bg-clip-text text-2xl mb-2">Who am I?</h3>
                     <p class="font-medium text-base text-slate-500 max-w-xl mb-4">I'm an Indonesia-based UI/UX designer with information system background. I started out my journey ±2 years ago, while being fascinated with all aspects of human computer interaction, i have specialize in ideation, prototyping and visual design. And also, i have basic knowledge about HTML and CSS.</p>
                     <p class="font-medium text-base text-slate-500 max-w-xl mb-4">If you get to know me a little more, you will quickly find that I love real madrid, music, and traveling.</p>
@@ -144,7 +144,7 @@
                 <div class="w-full px-4 lg:w-1/2 mt-4 lg:mt-0">
                     <div class="flex items-center gap-4 w-full ">
                         <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 1.png" alt="Frans Firmansyah">
-                        <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about.png" alt="Frans Firmansyah">
+                        <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about.jpg" alt="Frans Firmansyah">
                         <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 3.png" alt="Frans Firmansyah">
                     </div>
                 </div>
@@ -154,7 +154,7 @@
     <!-- about end -->
     
     <!-- experience start -->
-    <section id="" class="pb-32">
+    <section id="" class="pb-32 bg-[url(/dist/img/float/bg.png)]">
     <div class="container">
         <div class="flex flex-wrap px-4 space-y-8 lg:space-y-0">
             <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full px-6 pt-4 pb- lg:w-1/3 lg:rounded-br-none">
@@ -241,7 +241,7 @@
     <!-- COROUSEL END -->
 
     <!-- another start-->
-    <section id="work" class="pt-32 pb-32 bg-gradient-to-r from-blue-50 to-white">
+    <section id="work" class="pt-32 pb-32 bg-[url(/dist/img/float/bg.png)]">
         <div class="container">
             <div class="w-full px-4">
 
@@ -290,7 +290,7 @@
     <!-- another end -->
 
     <!-- connect start -->
-    <section id="" class="pb-32 pt-32">
+    <section id="" class="pb-32 pt-32 bg-[url(/dist/img/float/bg.png)]">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="card hidden1 w-full self-center px-4 lg:w-1/2">
