--- a/about.html
+++ b/about.html
@@ -104,15 +104,17 @@
         </div>
     </header>
     <!-- header end -->
-    
+
+    <img src="/dist/img/float/pattern.png" style="width: 10000px; height: 1300px;" class="hidden1 hidden lg:flex absolute" alt="">
+
     <!-- about start -->
-    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/bg.png)">
+    <section id="" class="pt-32 pb-32 lg:pt-56 bg-fixed bg-right-top" style="background-image: url(dist/img/float/bg.png)">
         <div class="container ">
             <div class="hidden1 flex flex-wrap py-4 mx-4 lg:mx-0 lg:py-0 rounded-lg bg-white bg-opacity-80 shadow-lg lg:shadow-none lg:bg-transparent">
                 <div class=" w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold bg-gradient-to-r from-blue-600 to-yellow-200 text-transparent bg-clip-text text-2xl mb-2">Who am I?</h3>
                     <p class="font-medium text-base text-slate-500 max-w-xl mb-4">I'm an Indonesia-based UI/UX designer with information system background. I started out my journey ±2 years ago, while being fascinated with all aspects of human computer interaction, i have specialize in ideation, prototyping and visual design. And also, i have basic knowledge about HTML and CSS.</p>
-                    <p class="font-medium text-base text-slate-500 max-w-xl mb-4">If you get to know me a little more, you will quickly find that I love real madrid, music, and traveling.</p>
+                    <p class="font-medium text-base text-slate-500 max-w-xl mb-4">If you get to know me a little more, you will quickly find that I love football, music, and traveling.👋</p>
                     <p class="font-medium text-base text-slate-500 max-w-xl mb-4">----</p>
                     <div class="flex items-center mb-4 lg:mb-0">
                         <!-- linkedin -->
