--- a/about.html
+++ b/about.html
@@ -145,9 +145,9 @@
                 </div>
                 <div class="w-full px-4 lg:w-1/2 mt-4 lg:mt-0">
                     <div class="flex items-center gap-4 w-full ">
-                        <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 1.png" alt="Frans Firmansyah">
-                        <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about.jpg" alt="Frans Firmansyah">
-                        <img class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 3.png" alt="Frans Firmansyah">
+                        <img loading="lazy" class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 1.png" alt="Frans Firmansyah">
+                        <img loading="lazy" class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about.jpg" alt="Frans Firmansyah">
+                        <img loading="lazy" class="card hidden1 shadow-xl rounded-lg justify-center flex-1 w-1/4" src="dist/img/about/about 3.png" alt="Frans Firmansyah">
                     </div>
                 </div>
             </div>
@@ -256,31 +256,31 @@
                 <div class="grid lg:grid-cols-3 gap-x-4 gap-y-4 grid-cols-1">
 
                     <div class="">
-                        <img src="dist/img/ANOTHER/7.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/7.png" class="rounded-2xl" alt="">
                     </div>
 
                     <div class="">
-                        <img src="dist/img/ANOTHER/5.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/5.png" class="rounded-2xl" alt="">
                     </div>
 
                     <div class="">
-                        <img src="dist/img/ANOTHER/3.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/3.png" class="rounded-2xl" alt="">
                     </div>
 
                     <div class="">
-                        <img src="dist/img/ANOTHER/1.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/1.png" class="rounded-2xl" alt="">
                     </div>
 
                     <div class="">
-                        <img src="dist/img/ANOTHER/2.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/2.png" class="rounded-2xl" alt="">
                     </div>
 
                     <div class="">
-                        <img src="dist/img/ANOTHER/8.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/8.png" class="rounded-2xl" alt="">
                     </div>
 
                     <div class="lg:col-span-3">
-                        <img src="dist/img/ANOTHER/4.png" class="rounded-2xl" alt="">
+                        <img loading="lazy" src="dist/img/ANOTHER/4.png" class="rounded-2xl" alt="">
                     </div>
 
                 </div>
@@ -307,7 +307,7 @@
                 </div>
                 <div class="card hidden1 w-full self-end px-4 lg:w-1/2">
                     <div class="relative mt-16 lg:mt-8 lg:right-0">
-                        <img src="dist/img/frans 8.png" alt="frans" class="max-w-full mx-auto" />
+                        <img loading="lazy"  src="dist/img/frans 8.png" alt="frans" class="max-w-full mx-auto" />
                     </div>
                 </div>
             </div>
