--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- header end -->
     
     <!-- hero section start -->
-    <section id="" class="lg:h-screen overflow-hidden lg:pt-60 pt-32 pb-32 bg-[url(/dist/img/float/bg.png)]">
+    <section loading="lazy"  id="" class="lg:h-screen overflow-hidden lg:pt-60 pt-32 pb-32 bg-[url(/dist/img/float/bg.png)]">
         <div class="container">
             
             <div class="flex flex-wrap">
