--- a/about.html
+++ b/about.html
@@ -161,11 +161,11 @@
             <div class="card hidden1 bg-white shadow-lg rounded-md rounded-tl-none rounded-tr-none w-full px-6 pt-4 pb- lg:w-1/3 lg:rounded-br-none">
                 <h3 class="font-semibold mb-2 bg-gradient-to-r from-blue-600 to-yellow-200 text-transparent bg-clip-text text-2xl">Experience</h3>
                 <p class="font-semibold text-base text-dark max-w-xl ">PaDi UMKM</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl">Product Designer</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Apr 2023 - Present (Jakarta)</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Present (Jakarta)</p>
                 <p class="font-semibold text-base text-dark max-w-xl">Telkom Indonesia</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
-                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Feb 2023 (Jakarta)</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer</p>
+                <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Sept 2022 - Present (Jakarta)</p>
                 <p class="font-semibold text-base text-dark max-w-xl">Jatis Mobile</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl">UI/UX Designer Intern</p>
                 <p class="font-normal text-base text-slate-500 max-w-xl mb-6">Mar 2022 - May 2022 (Jakarta)</p>
