--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                     
                     <img class="mx-auto lg:hidden" style="width: 150px;" src="/dist/img/hero.png" alt="">
-                    <h2 class="mt-6 font-normal text-slate-700 text-lg lg:text-xl text-center">👋 I'm Frans,</h2>
+                    <h2 class="mt-6 font-normal text-slate-700 text-lg lg:text-xl text-center">👋 I'm Frans</h2>
                     <h1 class="mt-6 block font-bold text-center text-2xl lg:text-4xl bg-gradient-to-r text-slate-800">Crafting Seamless <br>Experiences Creatively</h1>
                     
                     <!-- <div class="flex mb-6 justify-center">
